--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
               </ul>
 
               <div class="work__links">
-                <a href="https://www.youtube.com/c/Inceptns" target="_blank" class="link__text">
+                <a href="https://mbalsara.me/" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/GlxryX/portfolio" title="View Source Code" target="_blank">
+                <a href="https://github.com/GlxryX/personal-portfolio" title="View Source Code" target="_blank">
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
                 </a>
               </div>
@@ -136,7 +136,6 @@
           </div>
 
           <div class="about__photo-container">
-            <!-- Add a nice photo of yourself -->
             <img class="about__photo" src="./images/mihir-balsara.jpg" alt="" />
           </div>
         </div>
@@ -156,7 +155,6 @@
           contact me. I'm always open to new ideas and collaborations
           so don't be afraid to get in touch.
         </p>
-        <!-- Replace the email with yours -->
         <a href="mailto:mihirnbalsara@gmail.com" class="btn">mihirnbalsara@gmail.com</a>
       </div>
     </div>
@@ -181,7 +179,7 @@
       </ul>
 
       <p>
-        &copy; 2022 - Developed with love by <a href="this site" class="link">Mihir Balsara</a>.
+        &copy; 2022 - Developed with love by <a href="https://mbalsara.me/" class="link">Mihir Balsara</a>.
       </p>
     </div>
   </footer>
