--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <a href="https://mbalsara.me/" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/GlxryX/GlxryX.github.io" title="View Source Code" target="_blank">
+                <a href="https://github.com/GlxryX/personal-portfolio" title="View Source Code" target="_blank">
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
                 </a>
               </div>
