--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="row">
       <nav class="nav" role="navigation">
         <ul class="nav__items">
-          <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
+          <li class="nav__item"><a href="#experience" class="nav__link">experience</a></li>
           <li class="nav__item">
             <a href="#about" class="nav__link">About</a>
           </li>
@@ -48,11 +48,11 @@
 
   <main role="main">
 
-    <!-- Work Experience -->
+    <!-- Experience -->
 
-    <section class="work" id="work">
+    <section class="experience" id="experience">
       <div class="row">
-        <h2>My Work</h2>
+        <h2>Experience</h2>
         <div class="work__boxes">
 
           <!-- Each div with the work__box class is a project. -->
@@ -123,10 +123,10 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              When I'm not coding, I'm either running or with my friends, often toghether 
+              When I'm not coding, I'm either running or with my friends, often together 
               at the same time. As a distance runner doing a 3 season sport, I know how
               to perservere and enjoy the process. I've found that running is an excellent 
-              way to ease of my mind while also getting a good workout. Everyday is a day to 
+              way to ease of my mind while also getting a good workout. Every day is a day to 
               try a be better than the last one. Being able to share those experiences with
               others is also a great way to grow and learn. As a self-taught developer, it's
               I'm always eager to learn new things and improve my skills.
