--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
   <title>
     Mihir Balsara | Portfolio
   </title>
-
-  <meta name="description" content="Add small description of yourslef.">
+    <meta content="Mihir Balsara's Personal Website" property="og:title" />
+    <meta content="16 year old full stack developer and bot designer" property="og:description" />
+    <meta content="https://mbalsara.me/" property="og:url" />
+    <meta content="https://i.imgur.com/fEmFiMl.png" property="og:image" />
+    <meta content="#000000" data-react-helmet="true" name="theme-color" />
+  
+  <meta name="description" content="16 year old full stack developer and bot designer">
   <meta name="keywords" content="html, css, javascript, full stack, mongodb, student developer" />
   <link rel="stylesheet" href="index.css" />
 </head>
