--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="row">
       <nav class="nav" role="navigation">
         <ul class="nav__items">
-          <li class="nav__item"><a href="#experience" class="nav__link">experience</a></li>
+          <li class="nav__item"><a href="#experience" class="nav__link">Experience</a></li>
           <li class="nav__item">
             <a href="#about" class="nav__link">About</a>
           </li>
