--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta content="Mihir Balsara's Personal Website" property="og:title" />
     <meta content="16 year old full stack developer and bot designer" property="og:description" />
     <meta content="https://mbalsara.me/" property="og:url" />
-    <meta content="https://i.imgur.com/fEmFiMl.png" property="og:image" />
+    <meta content="https://i.imgur.com/naw7tAV.png" property="og:image" />
     <meta content="#000000" data-react-helmet="true" name="theme-color" />
   
   <meta name="description" content="16 year old full stack developer and bot designer">
