--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               </ul>
 
               <div class="work__links">
-                <a href="https://mbalsara.me/" target="_blank" class="link__text">
+                <a href="#top" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
                 <a href="https://github.com/GlxryX/personal-portfolio" title="View Source Code" target="_blank">
