--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       </ul>
 
       <p>
-        &copy; 2022 - Developed with love by <a href="https://mbalsara.me/" class="link">Mihir Balsara</a>.
+        &copy; 2022 - Developed with love by <a href="#about" class="nav__link">Mihir Balsara</a>.
       </p>
     </div>
   </footer>
