--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     Mihir Balsara | Portfolio
   </title>
     <meta content="Mihir Balsara's Personal Website" property="og:title" />
-    <meta content="16 year old full stack developer and bot designer" property="og:description" />
+    <meta content="Full stack developer and bot designer" property="og:description" />
     <meta content="https://mbalsara.me/" property="og:url" />
     <meta content="https://i.imgur.com/naw7tAV.png" property="og:image" />
     <meta content="#000000" data-react-helmet="true" name="theme-color" />
   
-  <meta name="description" content="16 year old full stack developer and bot designer">
+  <meta name="description" content="Full stack developer and bot designer">
   <meta name="keywords" content="html, css, javascript, full stack, mongodb, student developer" />
   <link rel="stylesheet" href="index.css" />
 </head>
