--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <span>Mihir Balsara</span>
         </h1>
 
-        <p>16 year old full stack developer and bot designer</p>
+        <p>Full stack developer and bot designer</p>
         <a href="#contact" class="btn btn--red">Get in touch</a>
       </div>
     </div>
