--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta content="#000000" data-react-helmet="true" name="theme-color" />
   
   <meta name="description" content="Full stack developer and bot designer">
-  <meta name="keywords" content="html, css, javascript, full stack, mongodb, student developer" />
+  <meta name="keywords" content="html, css, javascript, full stack, mongodb, student developer, mihir balsara, burlington, massachusetts" />
   <link rel="stylesheet" href="index.css" />
 </head>
 
