--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <div class="row">
       <ul class="footer__social-links">
         <li class="footer__social-link-item">
-          <a href="https://twitter.com/balsara_mihir/" title="Link to Twitter Profile">
+          <a href="https://twitter.com/m_balsara/" title="Link to Twitter Profile">
             <img src="./images/twitter.svg" class="footer__social-image" alt="Twitter">
           </a>
         </li>
