--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           contact me. I'm always open to new ideas and collaborations
           so don't be afraid to get in touch.
         </p>
-        <a href="mailto:mbalsara3@gatech.edu" class="btn">mihirnbalsara@gmail.com</a>
+        <a href="mailto:mbalsara3@gatech.edu" class="btn">mbalsara3@gatech.edu</a>
       </div>
     </div>
   </section>
