update resume link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </li>
         <!-- Add the Resume link here -->
         <li class="nav__item">
-          <a href="./assets/resume.pdf" class="nav__link" target="_blank">Resume</a>
+          <a href="resume.pdf" class="nav__link" target="_blank">Resume</a>
         </li>
       </ul>
     </nav>
@@ -128,7 +128,7 @@
               opportunities to grow as a professional.
             </p>
 
-            <a href="./assets/resume.pdf" class="btn" target="_blank">My Resume</a>
+            <a href="resume.pdf" class="btn" target="_blank">My Resume</a>
           </div>
 
           <div class="about__photo-container">
